2001-08-30  Alain Magloire

	* configure.in:  Add gl in ALL_LINGUAS.

2001-08-30  Kurt D Schwehr

	* doc/grep.1: Warn that grep insert a "--" between groups of matches,
	when using the context options.
	* doc/grep.texi: Likewised.

2001-08-25  Heikki Korpela

	* doc/grep.texi: Point out that some Platforms do not support
	reading of directories and silently ignore them.

2001-08-21  Alain Magloire

	* lib/malloc.c: New file:
	* lib/realloc.c: New file:
	* lib/Makefile.am: Add malloc.c and realloc.c in EXTRA_DIST.

2001-07-31  Alain Magloire

	* po/*.po: New files from the translation team:
	grep-2.5e.de.po  grep-2.5e.el.po  grep-2.5e.eo.po grep-2.5e.es.po
	grep-2.5e.et.po  grep-2.5e.fr.po  grep-2.5e.gl.po grep-2.5e.it.po
	grep-2.5e.pl.po  grep-2.5e.sl.po

2001-07-31  Andreas Schwab

	* src/grep.c: Fix all uses of error to pass a proper format
	string.

2001-07-29  Alain Magloire

	* grep/src/grep.c (usage): Typos corrected.
	Patches from Santiago Vila.

2001-07-29  Alain Magloire

	David Clissold, wrote:
	a small bug in the GNU grep 2.4.2, which may have gone unnoticed
	because it only causes a failure if building on a system with large
	files enabled (e.g. an "off_t" is a "long long" rather than a "long").
	savedir() takes on off_t argument, but in grepdir() the parameter
	is cast to an (unsigned).  Well, if an off_t is larger than an int,
	the value gets truncated.  This would not normally have an effect on a
	little-endian platform (unless the file is >2GB), but on a big-endian
	system it will always fail.  The external effect is that
	"grep -r foo dir_name" fails with ENOMEM (from malloc() within
	savedir()).

	* grep/src/grep.c (grepdir): Remove the (unsigned) cast when calling
	savedir().
	Patch from David Clissold.

2001-07-29  Alain Magloire

	* grep/doc/grep.texi: In Bugs report use {n,m} for consistency.
	* grep/doc/grep.1: Likewised.
	Noted by Steven Lucy.

2001-04-27  Isamu Hasegawa

	* dfa.c (mblen_buf) : New variable contains the amount of remain