@@ -12,7 +12,7 @@
 .de Id
 .ds Dt \\$4
 ..
-.Id $Id: grep.1,v 1.20 2001/08/31 00:45:25 alainm Exp $
+.Id $Id: grep.1,v 1.21 2001/09/25 10:00:16 bero Exp $
 .TH GREP 1 \*(Dt "GNU Project"
 .SH NAME
 grep, egrep, fgrep \- print lines matching a pattern
@@ -126,10 +126,10 @@ might output binary garbage,
 which can have nasty side effects if the output is a terminal and if the
 terminal driver interprets some of it as commands.
 .TP
-.BI \-\^\-colour ", " \-\^\-color
+.BI \-\^\-colour[=\fIWHEN\fR] ", " \-\^\-color[=\fIWHEN\fR]
 Surround the matching string with the marker find in
 .B GREP_COLOR
-environment variable.
+environment variable. WHEN may be `never', `always', or `auto'
 .TP
 .BR \-c ", " \-\^\-count
 Suppress normal output; instead print a count of
@@ -137,6 +137,20 @@ matching lines for each input file.
 With the
 .BR \-v ", " \-\^\-invert-match
 option (see below), count non-matching lines.
+.TP
+.BI \-D " ACTION" "\fR,\fP \-\^\-devices=" ACTION
+If an input file is a device, FIFO or socket, use
+.I ACTION
+to process it.  By default,
+.I ACTION
+is
+.BR read ,
+which means that devices are read just as if they were ordinary files.
+If
+.I ACTION
+is
+.BR skip ,
+devices are silently skipped.
 .TP
 .BI \-d " ACTION" "\fR,\fP \-\^\-directories=" ACTION
 If an input file is a directory, use
