@@ -1,6 +1,14 @@
+2001-09-25  Bernhard Rosenkraenzer <bero@redhat.com>
+	* configure.in: Detect pcre correctly even when it's in
+	non-standard locations, using pcre-config
+	* src/grep.c: Add --color={always,never,tty} argument (like in ls)
+	* src/grep.c: Turn off blinking in the default colorization
+	* src/grep.c: Add --devices (-D) switch (analogous to --directories)
+	* doc/grep.texi, doc/grep.1: Document changes (--color, --devices, -D)
+
 2001-08-30  Alain Magloire
 
-	* configure.in:  Add gl in ALL_LINGUAS.
+	* configure.in: Add gl in ALL_LINGUAS.
 
 2001-08-30  Kurt D Schwehr
 
